--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ paperweight = "2.0.0-beta.17"
 run-task = "2.3.1"
 resource-factory = "1.3.0"
 javapoet = "0.7.0"
+plugin-publish = "1.3.1"
 
 [libraries]
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
@@ -13,3 +14,6 @@ paperweight-userdev = { module = "io.papermc.paperweight:paperweight-userdev", v
 run-task = { module = "xyz.jpenilla:run-task", version.ref = "run-task" }
 resource-factory = { module = "xyz.jpenilla:resource-factory", version.ref = "resource-factory" }
 javapoet = { module = "com.palantir.javapoet:javapoet", version.ref = "javapoet" }
+
+[plugins]
+plugin-publish = { id = "com.gradle.plugin-publish", version.ref = "plugin-publish" }
