build: configure publishing metadata

--- a/plugin/gradle.properties
+++ b/plugin/gradle.properties
@@ -5,3 +5,21 @@ version=0.2.0-SNAPSHOT
 org.gradle.configuration-cache=true
 org.gradle.parallel=true
 org.gradle.caching=true
+### Maven Publish POM Metadata
+POM_NAME=Paper Infrastructure Gradle Plugin
+POM_DESCRIPTION=A collection of Gradle plugins that simplify Paper plugin development for Minecraft
+POM_INCEPTION_YEAR=2025
+POM_URL=https://github.com/tozydev/paper-infra-gradle
+# License
+POM_LICENSE_NAME=The Apache Software License, Version 2.0
+POM_LICENSE_URL=https://github.com/tozydev/paper-infra-gradle/blob/main/LICENSE
+POM_LICENSE_DIST=repo
+# SCM
+POM_SCM_URL=https://github.com/tozydev/paper-infra-gradle
+POM_SCM_CONNECTION=scm:git:git://github.com/tozydev/paper-infra-gradle.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/tozydev/paper-infra-gradle.git
+# Developers
+POM_DEVELOPER_ID=tozydev
+POM_DEVELOPER_NAME=Thanh Tân
+POM_DEVELOPER_EMAIL=contact@tozydev.id.vn
+POM_DEVELOPER_URL=https://tozydev.id.vn
