--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ run-task = "2.3.1"
 resource-factory = "1.3.0"
 javapoet = "0.7.0"
 plugin-publish = "1.3.1"
+maven-publish = "0.33.0"
 
 [libraries]
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
@@ -14,6 +15,8 @@ paperweight-userdev = { module = "io.papermc.paperweight:paperweight-userdev", v
 run-task = { module = "xyz.jpenilla:run-task", version.ref = "run-task" }
 resource-factory = { module = "xyz.jpenilla:resource-factory", version.ref = "resource-factory" }
 javapoet = { module = "com.palantir.javapoet:javapoet", version.ref = "javapoet" }
+gradle-maven-publish-plugin = { module = "com.vanniktech:gradle-maven-publish-plugin", version.ref = "maven-publish" }
 
 [plugins]
 plugin-publish = { id = "com.gradle.plugin-publish", version.ref = "plugin-publish" }
+maven-publish = { id = "com.vanniktech.maven.publish", version.ref = "maven-publish" }
