feat: refactor plugin creation in build.gradle.kts for improved maintainability

--- a/plugin/gradle.properties
+++ b/plugin/gradle.properties
@@ -23,3 +23,23 @@ POM_DEVELOPER_ID=tozydev
 POM_DEVELOPER_NAME=Thanh Tân
 POM_DEVELOPER_EMAIL=contact@tozydev.id.vn
 POM_DEVELOPER_URL=https://tozydev.id.vn
+### Plugin Metadata
+pluginWebsite=https://github.com/tozydev/paper-infra-gradle
+pluginVcsUrl=https://github.com/tozydev/paper-infra-gradle.git
+pluginTags=paper, minecraft, infrastructure, development, tools, server-plugin
+# paper-infra.java
+plugin.java.displayName=Paper Infrastructure Java Plugin
+plugin.java.description=A Gradle plugin that simplifies Java environment setup for Paper plugin development
+plugin.java.implementationClass=vn.id.tozydev.paperinfra.java.PaperInfraJavaPlugin
+# paper-infra.kotlin
+plugin.kotlin.displayName=Paper Infrastructure Kotlin Plugin
+plugin.kotlin.description=A Gradle plugin that simplifies Kotlin environment setup for Paper plugin development
+plugin.kotlin.implementationClass=vn.id.tozydev.paperinfra.kotlin.PaperInfraKotlinPlugin
+# paper-infra.paper
+plugin.paper.displayName=Paper Infrastructure Paper Plugin
+plugin.paper.description=A Gradle plugin that simplifies Paper plugin setup for Minecraft development
+plugin.paper.implementationClass=vn.id.tozydev.paperinfra.paper.PaperInfraPaperPlugin
+# paper-infra.shadow
+plugin.shadow.displayName=Paper Infrastructure Shadow Plugin
+plugin.shadow.description=A Gradle plugin that simplifies Shadow JAR creation for Paper plugins
+plugin.shadow.implementationClass=vn.id.tozydev.paperinfra.shadow.PaperInfraShadowPlugin
