--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 kotlin = "2.2.0"
-shadow = "9.0.0-beta17"
+shadow = "9.0.0-rc1"
 paperweight = "2.0.0-beta.17"
 run-task = "2.3.1"
 resource-factory = "1.3.0"
